tests/good/syntax/067-if-1.clap
val x = 
  if True then False else True

