tests/bad/syntax/067-if-1.clap
val x = 
  if True then else True

